--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation("net.kyori:adventure-api:4.17.0")
     implementation("net.kyori:adventure-nbt:4.17.0")
     implementation("com.google.code.gson:gson:2.11.0")
+    implementation 'org.fusesource.jansi:jansi:2.4.1'
 }
 
 test {
